@@ -151,6 +151,37 @@ class ClosureAsLastMethodParameterRuleTest extends AbstractRuleTestCase {
         assertNoViolations(SOURCE)
     }
 
+    void testMethodCallSurroundedByExtraParentheses() {
+        final SOURCE = '''
+            def filterFunds() {
+               (funds.findAll { it.fundCode } )
+            }
+            def extendFunds() {
+               (funds.extend(3) { it.fundCode } )
+            }
+            def purgeFunds() {
+               (funds.purge {
+                    it.fundCode
+                    }
+               )
+            }
+            boolean isSkipParticipant(Participant participant) {
+                if(((majorMinorStatusList.findAll{it -> it==(participant.majorStatus + participant.minorStatus).trim()})) ||
+                        ((majorStatusList.findAll{it ->it==(participant.majorStatus).trim()})) ||
+                        (participant.paymentCode == 1)||(participant.ssn=='')) {
+                    return true
+                }
+                return false
+            }
+
+            // The only violation
+            def clearFunds() {
+               println(funds.clear('clearing', { it.fundCode }) )
+            }
+          '''
+        assertSingleViolation(SOURCE, 25, "funds.clear('clearing', { it.fundCode })", "The last parameter to the 'clear' method call is a closure an can appear outside the parenthesis")
+    }
+
     protected Rule createRule() {
         new ClosureAsLastMethodParameterRule()
     }
